# checklist-server

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  server_vs12.sln  server_vs12.vcxproj  server_vs15.sln  server_vs15.vcxproj
inc/: address.h  atomic_lock.h  atomic_queue.h  basic_types.h  client.h  client_socket.h  list_processor.h  log_manager.h  network_packet.h  packet.h  platform.h  platform_socket.h  server_socket.h  socket.h  u16basic.h  u16stream.h
src/: CMakeLists.txt  address.cpp  client.cpp  client_socket.cpp  list_processor.cpp  log_manager.cpp  main.cpp  network_packet.cpp  packet.cpp  server_socket.cpp  socket.cpp  u16basic.cpp
src/data/: CMakeLists.txt  DataManager.cpp  DataManager.h  List.cpp  List.h  ListItem.cpp  ListItem.h  ListSerializer.cpp  ListSerializer.h
src/network/: CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  HttpRequestHandler.cpp  HttpRequestHandler.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpUriPatternProcessor.cpp  HttpUriPatternProcessor.h  TcpSocket.cpp  TcpSocket.h
src/server/: CMakeLists.txt  RestApiService.cpp  RestApiService.h  main.cpp
tests/: CMakeLists.txt  HttpRequstUnitTests.cpp  HttpUriPatternProcessorUnitTests.cpp
